--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,6 +3,7 @@ include *.bib
 include *.rst
 graft colour_checker_detection/examples
 prune colour_checker_detection/examples/.ipynb_checkpoints
+global-exclude __pycache__
 global-exclude *.pyc
 global-exclude *.pyo
 global-exclude ._*
