Add "Pytest" to dependencies.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,6 +53,7 @@ invoke = { version = "*", optional = true }  # Development dependency.
 mock = { version = "*", optional = true }  # Development dependency.
 nose = { version = "*", optional = true }  # Development dependency.
 numpy = { version = "*", optional = true }
+pytest = { version = "*", optional = true }  # Development dependency.
 restructuredtext-lint = { version = "*", optional = true }  # Development dependency.
 sphinx = { version = "*", optional = true }  # Development dependency.
 sphinx_rtd_theme = { version = "*", optional = true }  # Development dependency.
@@ -69,6 +70,7 @@ flake8 = "*"
 invoke = "*"
 mock = "*"
 nose = "*"
+pytest = "*"
 restructuredtext-lint = "*"
 sphinx = "*"
 sphinx_rtd_theme = "*"
@@ -86,6 +88,7 @@ development = [
     "invoke",
     "mock",
     "nose",
+    "pytest",
     "restructuredtext-lint",
     "sphinx",
     "sphinx_rtd_theme",
