--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
 alabaster==0.7.12
 atomicwrites==1.3.0
 attrs==19.2.0
-babel==2.7.0
+Babel==2.7.0
 biblib-simple==0.1.1
 bleach==3.1.0
 certifi==2019.9.11
 chardet==3.0.4
-colorama==0.4.1; sys_platform == "win32"
+colour==0.3.13
+colour-demosaicing==0.1.4
 colour-science==0.3.13
 coverage==4.5.4
 coveralls==1.8.2
@@ -17,11 +18,11 @@ flake8==3.7.8
 idna==2.8
 imageio==2.5.0
 imagesize==1.1.0
-importlib-metadata==0.23; python_version < "3.8"
+importlib-metadata==0.23
 invoke==1.3.0
-jinja2==2.10.3
+Jinja2==2.10.3
 latexcodec==1.0.7
-markupsafe==1.1.1
+MarkupSafe==1.1.1
 mccabe==0.6.1
 mock==3.0.5
 more-itertools==7.2.0
@@ -30,8 +31,7 @@ numpy==1.17.2
 opencv-python==4.1.1.26
 oset==0.1.3
 packaging==19.2
-pathlib2==2.3.5; python_version < "3.6"
-pillow==6.2.0
+Pillow==6.2.0
 pkginfo==1.5.0.1
 pluggy==0.13.0
 py==1.8.0
@@ -39,11 +39,11 @@ pybtex==0.22.2
 pybtex-docutils==0.2.1
 pycodestyle==2.5.0
 pyflakes==2.1.1
-pygments==2.4.2
+Pygments==2.4.2
 pyparsing==2.4.2
 pytest==5.2.0
 pytz==2019.2
-pyyaml==5.1.2
+PyYAML==5.1.2
 readme-renderer==24.0
 requests==2.22.0
 requests-toolbelt==0.9.1
@@ -51,7 +51,7 @@ restructuredtext-lint==1.3.0
 scipy==1.3.1
 six==1.12.0
 snowballstemmer==2.0.0
-sphinx==2.2.0
+Sphinx==2.2.0
 sphinx-rtd-theme==0.4.3
 sphinxcontrib-applehelp==1.0.1
 sphinxcontrib-bibtex==1.0.0
@@ -67,4 +67,4 @@ urllib3==1.25.6
 wcwidth==0.1.7
 webencodings==0.5.1
 yapf==0.23.0
-zipp==0.6.0; python_version < "3.8"
+zipp==0.6.0
