--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,8 @@ name = "colour-checker-detection"
 version = "0.1.1"
 description = "Colour checker detection with Python"
 license = "BSD-3-Clause"
-authors = [ "Colour Developers" ]
+authors = [ "Colour Developers <colour-science@googlegroups.com>" ]
+maintainers = [ "Colour Developers <colour-science@googlegroups.com>" ]
 readme = 'README.rst'
 repository = "https://github.com/colour-science/colour-checker-detection"
 homepage = "https://www.colour-science.org/"
