--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -46,7 +46,7 @@ jobs:
     - name: Test with nosetests
       run: |
         source $(poetry env info -p)/bin/activate
-        python -W ignore -m nose -q -v --nocapture --with-doctest --doctest-options=+ELLIPSIS --with-coverage --cover-package=$CI_PACKAGE $CI_PACKAGE
+        python -W ignore -m nose -q -v --with-doctest --doctest-options=+ELLIPSIS --with-coverage --cover-package=$CI_PACKAGE $CI_PACKAGE
     - name: Upload Coverage to coveralls.io
       if: matrix.python-version == '3.6' || matrix.python-version == '3.7'
       run: |
@@ -101,7 +101,7 @@ jobs:
     - name: Test with nosetests
       run: |
         call %CI_VIRTUAL_ENVIRONMENT%\scripts\activate
-        python -W ignore -m nose -q -v --nocapture --with-doctest --doctest-options=+ELLIPSIS --with-coverage --cover-package=%CI_PACKAGE% %CI_PACKAGE%
+        python -W ignore -m nose -q -v --with-doctest --doctest-options=+ELLIPSIS --with-coverage --cover-package=%CI_PACKAGE% %CI_PACKAGE%
       shell: cmd
     - name: Upload Coverage to coveralls.io
       if: matrix.python-version == '3.6' || matrix.python-version == '3.7'
