--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -9,6 +9,7 @@ jobs:
       matrix:
         os: [macOS-latest, ubuntu-18.04, windows-2019]
         python-version: [3.6, 3.7, 3.8]
+      fail-fast: false
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v1
@@ -28,13 +29,12 @@ jobs:
     - name: Install Poetry
       run: |
         curl -L https://raw.githubusercontent.com/sdispater/poetry/master/get-poetry.py -o get-poetry.py
-        python get-poetry.py
         python get-poetry.py --version 1.0.10
         echo "$HOME/.poetry/bin" >> $GITHUB_PATH
       shell: bash
     - name: Install Package Dependencies
       run: |
-        poetry install --extras "optional plotting"
+        poetry install
         poetry run python -c "import imageio;imageio.plugins.freeimage.download()"
       shell: bash
     - name: Lint with flake8
@@ -46,7 +46,6 @@ jobs:
         poetry run python -W ignore -m nose -q -v --with-doctest --doctest-options=+ELLIPSIS --with-coverage --cover-package=$CI_PACKAGE $CI_PACKAGE
       shell: bash
     - name: Upload Coverage to coveralls.io
-      if: matrix.python-version == '3.6' || matrix.python-version == '3.7'
       run: |
         if [ -z "$COVERALLS_REPO_TOKEN" ]; then echo \"COVERALLS_REPO_TOKEN\" secret is undefined!; else poetry run coveralls; fi
       shell: bash
