--- a/requirements.txt
+++ b/requirements.txt
@@ -3,121 +3,127 @@ appdirs==1.4.4
 appnope==0.1.2
 argon2-cffi==20.1.0
 async-generator==1.10
-attrs==20.3.0
-Babel==2.9.0
+attrs==21.2.0
+Babel==2.9.1
 backcall==0.2.0
 biblib-simple==0.1.1
-bleach==3.2.1
-certifi==2020.12.5
-cffi==1.14.4
+bleach==3.3.0
+certifi==2021.5.30
+cffi==1.14.5
 cfgv==3.0.0
 chardet==4.0.0
 colorama==0.4.4
+colour-checker-detection==0.1.2
 colour-science==0.3.16
-coverage==5.3.1
-coveralls==3.0.0
+coverage==5.5
+coveralls==3.1.0
 cycler==0.10.0
-decorator==4.4.2
-defusedxml==0.6.0
-distlib==0.3.1
+decorator==5.0.9
+defusedxml==0.7.1
+distlib==0.3.2
 docopt==0.6.2
-docutils==0.16
+docutils==0.17.1
 entrypoints==0.3
 filelock==3.0.12
-flake8==3.8.4
-identify==1.5.12
+flake8==3.9.2
+identify==1.6.2
 idna==2.10
 imageio==2.9.0
 imagesize==1.2.0
+importlib-metadata==4.5.0
 iniconfig==1.1.1
 invoke==1.5.0
-ipykernel==5.4.3
+ipykernel==5.5.5
 ipython==7.16.1
 ipython-genutils==0.2.0
 ipywidgets==7.6.3
 jedi==0.18.0
-Jinja2==2.11.2
+Jinja2==3.0.1
 jsonschema==3.2.0
 jupyter==1.0.0
-jupyter-client==6.1.11
-jupyter-console==6.2.0
-jupyter-core==4.7.0
+jupyter-client==6.1.13
+jupyter-console==6.4.0
+jupyter-core==4.7.1
 jupyterlab-pygments==0.1.2
 jupyterlab-widgets==1.0.0
-keyring==21.8.0
+keyring==23.0.1
 kiwisolver==1.3.1
 latexcodec==2.0.1
-MarkupSafe==1.1.1
-matplotlib==3.3.3
+MarkupSafe==2.0.1
+matplotlib==3.3.4
 mccabe==0.6.1
 mistune==0.8.4
 mock==4.0.3
 nbclient==0.5.1
 nbconvert==6.0.7
-nbformat==5.0.8
-nest-asyncio==1.4.3
-nodeenv==1.5.0
+nbformat==5.1.3
+nest-asyncio==1.5.1
+nodeenv==1.6.0
 nose==1.3.7
-notebook==6.1.6
+notebook==6.4.0
 numpy==1.19.5
-opencv-python==4.5.1.48
+opencv-python==4.5.2.54
 oset==0.1.3
-packaging==20.8
+packaging==20.9
 pandocfilters==1.4.3
-parso==0.8.1
+parso==0.8.2
 pexpect==4.8.0
 pickleshare==0.7.5
-Pillow==8.1.0
-pkginfo==1.6.1
+Pillow==8.2.0
+pip==21.1.1
+pkginfo==1.7.0
 pluggy==0.13.1
 pre-commit==2.1.1
-prometheus-client==0.9.0
+prometheus-client==0.11.0
 prompt-toolkit==3.0.3
 ptyprocess==0.7.0
 py==1.10.0
-pybtex==0.23.0
-pybtex-docutils==0.2.2
-pycodestyle==2.6.0
+pybtex==0.24.0
+pybtex-docutils==1.0.0
+pycodestyle==2.7.0
 pycparser==2.20
-pyflakes==2.2.0
-Pygments==2.7.4
+pyflakes==2.3.1
+Pygments==2.9.0
 pyparsing==2.4.7
 pyrsistent==0.17.3
-pytest==6.2.1
+pytest==6.2.4
 python-dateutil==2.8.1
-pytz==2020.5
-PyYAML==5.3.1
-pyzmq==20.0.0
-qtconsole==5.0.1
+pytz==2021.1
+PyYAML==5.4.1
+pyzmq==22.1.0
+qtconsole==5.1.0
 QtPy==1.9.0
-readme-renderer==28.0
+readme-renderer==29.0
 requests==2.25.1
 requests-toolbelt==0.9.1
 restructuredtext-lint==1.3.2
-rfc3986==1.4.0
+rfc3986==1.5.0
 scipy==1.5.4
 Send2Trash==1.5.0
-six==1.15.0
-snowballstemmer==2.0.0
+setuptools==56.2.0
+six==1.16.0
+snowballstemmer==2.1.0
 Sphinx==3.1.2
 sphinx-rtd-theme==0.5.1
 sphinxcontrib-applehelp==1.0.2
 sphinxcontrib-bibtex==1.0.0
 sphinxcontrib-devhelp==1.0.2
-sphinxcontrib-htmlhelp==1.0.3
+sphinxcontrib-htmlhelp==2.0.0
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.3
-sphinxcontrib-serializinghtml==1.1.4
-terminado==0.9.2
-testpath==0.4.4
+sphinxcontrib-serializinghtml==1.1.5
+terminado==0.10.1
+testpath==0.5.0
 toml==0.10.2
 tornado==6.1
-tqdm==4.56.0
+tqdm==4.61.0
 traitlets==4.3.3
-twine==3.3.0
-urllib3==1.26.2
-virtualenv==20.3.0
+twine==3.4.1
+urllib3==1.26.5
+virtualenv==20.4.7
 wcwidth==0.2.5
 webencodings==0.5.1
+wheel==0.36.2
 widgetsnbextension==3.5.1
 yapf==0.23.0
+zipp==3.4.1
