--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,7 +45,7 @@ exclude = [
 
 [tool.poetry.dependencies]
 python = "^3.7"
-colour-science = "^0.3.16"
+#colour-science = "^0.3.16"
 opencv-python = "^4"
 
 biblib-simple = { version = "*", optional = true }  # Development dependency.
@@ -55,6 +55,7 @@ flake8 = { version = "*", optional = true }  # Development dependency.
 invoke = { version = "*", optional = true }  # Development dependency.
 jupyter = { version = "*", optional = true }  # Development dependency.
 matplotlib = { version = "*", optional = true }  # Development dependency.
+mypy = { version = "*", optional = true }  # Development dependency.
 nose = { version = "*", optional = true }  # Development dependency.
 numpy = { version = "*", optional = true }
 pre-commit = { version = "*", optional = true }  # Development dependency.
@@ -65,6 +66,7 @@ sphinx_rtd_theme = { version = "*", optional = true }  # Development dependency.
 sphinxcontrib-bibtex = { version = "*", optional = true }  # Development dependency.
 toml = { version = "*", optional = true }  # Development dependency.
 twine = { version = "*", optional = true }  # Development dependency.
+typing-extensions = { version = "*", optional = true }  # Development dependency.
 yapf = { version = "0.23", optional = true }  # Development dependency.
 
 [tool.poetry.dev-dependencies]
@@ -75,6 +77,7 @@ flake8 = "*"
 invoke = "*"
 jupyter = "*"
 matplotlib = "*"
+mypy = "*"
 nose = "*"
 pre-commit = "*"
 pytest = "*"
@@ -84,6 +87,7 @@ sphinx_rtd_theme = "*"
 sphinxcontrib-bibtex = "*"
 toml = "*"
 twine = "*"
+typing-extensions = "*"
 yapf = "0.23"
 
 [tool.poetry.extras]
@@ -95,6 +99,7 @@ development = [
     "invoke",
     "jupyter",
     "matplotlib",
+    "mypy",
     "nose",
     "pre-commit",
     "pytest",
@@ -104,9 +109,14 @@ development = [
     "sphinxcontrib-bibtex",
     "toml",
     "twine",
+    "typing-extensions",
     "yapf"
 ]
 read-the-docs = [ "numpy", "sphinxcontrib-bibtex" ]
+
+[tool.mypy]
+plugins = "numpy.typing.mypy_plugin"
+ignore_missing_imports = true
 
 [build-system]
 requires = [ "poetry>=0.12" ]
