--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,75 +44,91 @@ exclude = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.7"
-#colour-science = "^0.3.16"
-opencv-python = "^4"
+python = ">= 3.8, < 3.11"
+colour-science = "^0.3.16"
+opencv-python = ">= 4, < 5"
 
 biblib-simple = { version = "*", optional = true }  # Development dependency.
+black = { version = "*", optional = true }  # Development dependency.
 coverage = { version = "*", optional = true }  # Development dependency.
 coveralls = { version = "*", optional = true }  # Development dependency.
 flake8 = { version = "*", optional = true }  # Development dependency.
+flynt = { version = "*", optional = true }  # Development dependency.
 invoke = { version = "*", optional = true }  # Development dependency.
 jupyter = { version = "*", optional = true }  # Development dependency.
-matplotlib = { version = "*", optional = true }  # Development dependency.
+matplotlib = { version = ">= 3.2, != 3.5.0, != 3.5.1", optional = true }
 mypy = { version = "*", optional = true }  # Development dependency.
-nose = { version = "*", optional = true }  # Development dependency.
-numpy = { version = "*", optional = true }
+numpy = { version = ">= 1.19, < 2", optional = true }
 pre-commit = { version = "*", optional = true }  # Development dependency.
 pytest = { version = "*", optional = true }  # Development dependency.
+pytest-cov = { version = "*", optional = true }  # Development dependency.
+pyupgrade = { version = "*", optional = true }  # Development dependency.
 restructuredtext-lint = { version = "*", optional = true }  # Development dependency.
 sphinx = { version = "*", optional = true }  # Development dependency.
-sphinx_rtd_theme = { version = "*", optional = true }  # Development dependency.
+sphinx-rtd-theme = { version = "*", optional = true }  # Development dependency.
 sphinxcontrib-bibtex = { version = "*", optional = true }  # Development dependency.
 toml = { version = "*", optional = true }  # Development dependency.
 twine = { version = "*", optional = true }  # Development dependency.
-typing-extensions = { version = "*", optional = true }  # Development dependency.
-yapf = { version = "0.23", optional = true }  # Development dependency.
 
 [tool.poetry.dev-dependencies]
 biblib-simple = "*"
-coverage = "*"
+black = "*"
+coverage = "!= 6.3"
 coveralls = "*"
 flake8 = "*"
+flynt = "*"
 invoke = "*"
 jupyter = "*"
-matplotlib = "*"
 mypy = "*"
-nose = "*"
 pre-commit = "*"
 pytest = "*"
+pytest-cov = "*"
+pyupgrade = "*"
 restructuredtext-lint = "*"
 sphinx = "*"
-sphinx_rtd_theme = "*"
+sphinx-rtd-theme = "*"
 sphinxcontrib-bibtex = "*"
 toml = "*"
 twine = "*"
-typing-extensions = "*"
-yapf = "0.23"
 
 [tool.poetry.extras]
 development = [
     "biblib-simple",
+    "black",
     "coverage",
     "coveralls",
     "flake8",
+    "flynt",
     "invoke",
     "jupyter",
-    "matplotlib",
     "mypy",
-    "nose",
     "pre-commit",
     "pytest",
+    "pytest-cov",
+    "pyupgrade",
     "restructuredtext-lint",
     "sphinx",
-    "sphinx_rtd_theme",
+    "sphinx-rtd-theme",
     "sphinxcontrib-bibtex",
     "toml",
     "twine",
-    "typing-extensions",
-    "yapf"
 ]
-read-the-docs = [ "numpy", "sphinxcontrib-bibtex" ]
+plotting = [ "matplotlib" ]
+read-the-docs = [ "matplotlib", "numpy", "sphinxcontrib-bibtex" ]
+
+[tool.black]
+line-length = 79
+exclude = '''
+/(
+    \.git
+  | \.mypy_cache
+  | build
+  | dist
+)/
+'''
+
+[tool.flynt]
+line_length=999
 
 [tool.mypy]
 plugins = "numpy.typing.mypy_plugin"
