--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,6 +61,7 @@ mypy = { version = "*", optional = true }  # Development dependency.
 numpy = { version = ">= 1.19, < 2", optional = true }
 pre-commit = { version = "*", optional = true }  # Development dependency.
 pydata-sphinx-theme = { version = "*", optional = true }  # Development dependency.
+pydocstyle = { version = "*", optional = true }  # Development dependency.
 pytest = { version = "*", optional = true }  # Development dependency.
 pytest-cov = { version = "*", optional = true }  # Development dependency.
 pyupgrade = { version = "*", optional = true }  # Development dependency.
@@ -82,6 +83,7 @@ jupyter = "*"
 mypy = "*"
 pre-commit = "*"
 pydata-sphinx-theme = "*"
+pydocstyle = "*"
 pytest = "*"
 pytest-cov = "*"
 pyupgrade = "*"
@@ -104,6 +106,7 @@ development = [
     "mypy",
     "pre-commit",
     "pydata-sphinx-theme",
+    "pydocstyle",
     "pytest",
     "pytest-cov",
     "pyupgrade",
@@ -138,6 +141,10 @@ line_length=999
 [tool.mypy]
 plugins = "numpy.typing.mypy_plugin"
 ignore_missing_imports = true
+
+[tool.pydocstyle]
+convention = "numpy"
+add-ignore = "D104,D200,D202,D205,D301,D400"
 
 [build-system]
 requires = [ "poetry>=0.12" ]
