--- a/.github/workflows/continuous-integration-documentation.yml
+++ b/.github/workflows/continuous-integration-documentation.yml
@@ -7,8 +7,8 @@ jobs:
     name: ${{ matrix.os }} - Python ${{ matrix.python-version }}
     strategy:
       matrix:
-        os: [ubuntu-20.04]
-        python-version: [3.8]
+        os: [ubuntu-22.04]
+        python-version: [3.11]
       fail-fast: false
     runs-on: ${{ matrix.os }}
     steps:
@@ -16,7 +16,7 @@ jobs:
     - name: Environment Variables
       run: |
         echo "CI_PYTHON_VERSION=${{ matrix.python-version }}" >> $GITHUB_ENV
-        echo "CI_PACKAGE=colour" >> $GITHUB_ENV
+        echo "CI_PACKAGE=colour_checker_detection" >> $GITHUB_ENV
         echo "CI_SHA=${{ github.sha }}" >> $GITHUB_ENV
         echo "MPLBACKEND=AGG" >> $GITHUB_ENV
         echo "COLOUR_SCIENCE__DOCUMENTATION_BUILD=True" >> $GITHUB_ENV
@@ -31,8 +31,7 @@ jobs:
         sudo apt-get --yes install latexmk texlive-full
     - name: Install Poetry
       run: |
-        curl -L https://raw.githubusercontent.com/sdispater/poetry/master/get-poetry.py -o get-poetry.py
-        python get-poetry.py
+        curl -sSL https://install.python-poetry.org | POETRY_HOME=$HOME/.poetry python3 -
         echo "$HOME/.poetry/bin" >> $GITHUB_PATH
       shell: bash
     - name: Install Package Dependencies
