--- a/pyproject.toml
+++ b/pyproject.toml
@@ -118,6 +118,7 @@ development = [
     "pydocstyle",
     "pytest",
     "pytest-cov",
+    "pytest-xdist",
     "pyupgrade",
     "restructuredtext-lint",
     "sphinx",
