--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 accessible-pygments==0.0.4 ; python_version >= "3.9" and python_version < "3.13"
-alabaster==0.7.13 ; python_version >= "3.9" and python_version < "3.13"
+alabaster==0.7.16 ; python_version >= "3.9" and python_version < "3.13"
 anyio==4.2.0 ; python_version >= "3.9" and python_version < "3.13"
 appnope==0.1.3 ; python_version >= "3.9" and python_version < "3.13" and platform_system == "Darwin"
 argon2-cffi==23.1.0 ; python_version >= "3.9" and python_version < "3.13"
@@ -53,7 +53,7 @@ isoduration==20.11.0 ; python_version >= "3.9" and python_version < "3.13"
 jaraco-classes==3.3.0 ; python_version >= "3.9" and python_version < "3.13"
 jedi==0.19.1 ; python_version >= "3.9" and python_version < "3.13"
 jeepney==0.8.0 ; python_version >= "3.9" and python_version < "3.13" and sys_platform == "linux"
-jinja2==3.1.2 ; python_version >= "3.9" and python_version < "3.13"
+jinja2==3.1.3 ; python_version >= "3.9" and python_version < "3.13"
 json5==0.9.14 ; python_version >= "3.9" and python_version < "3.13"
 jsonpointer==2.4 ; python_version >= "3.9" and python_version < "3.13"
 jsonschema==4.20.0 ; python_version >= "3.9" and python_version < "3.13"
@@ -62,10 +62,10 @@ jsonschema[format-nongpl]==4.20.0 ; python_version >= "3.9" and python_version <
 jupyter==1.0.0 ; python_version >= "3.9" and python_version < "3.13"
 jupyter-client==8.6.0 ; python_version >= "3.9" and python_version < "3.13"
 jupyter-console==6.6.3 ; python_version >= "3.9" and python_version < "3.13"
-jupyter-core==5.6.1 ; python_version >= "3.9" and python_version < "3.13"
+jupyter-core==5.7.1 ; python_version >= "3.9" and python_version < "3.13"
 jupyter-events==0.9.0 ; python_version >= "3.9" and python_version < "3.13"
 jupyter-lsp==2.2.1 ; python_version >= "3.9" and python_version < "3.13"
-jupyter-server==2.12.1 ; python_version >= "3.9" and python_version < "3.13"
+jupyter-server==2.12.3 ; python_version >= "3.9" and python_version < "3.13"
 jupyter-server-terminals==0.5.1 ; python_version >= "3.9" and python_version < "3.13"
 jupyterlab==4.0.10 ; python_version >= "3.9" and python_version < "3.13"
 jupyterlab-pygments==0.3.0 ; python_version >= "3.9" and python_version < "3.13"
@@ -80,7 +80,7 @@ matplotlib==3.8.2 ; python_version >= "3.9" and python_version < "3.13"
 matplotlib-inline==0.1.6 ; python_version >= "3.9" and python_version < "3.13"
 mdurl==0.1.2 ; python_version >= "3.9" and python_version < "3.13"
 mistune==3.0.2 ; python_version >= "3.9" and python_version < "3.13"
-more-itertools==10.1.0 ; python_version >= "3.9" and python_version < "3.13"
+more-itertools==10.2.0 ; python_version >= "3.9" and python_version < "3.13"
 nbclient==0.9.0 ; python_version >= "3.9" and python_version < "3.13"
 nbconvert==7.14.0 ; python_version >= "3.9" and python_version < "3.13"
 nbformat==5.9.2 ; python_version >= "3.9" and python_version < "3.13"
@@ -109,10 +109,10 @@ pure-eval==0.2.2 ; python_version >= "3.9" and python_version < "3.13"
 pybtex==0.24.0 ; python_version >= "3.9" and python_version < "3.13"
 pybtex-docutils==1.0.3 ; python_version >= "3.9" and python_version < "3.13"
 pycparser==2.21 ; python_version >= "3.9" and python_version < "3.13"
-pydata-sphinx-theme==0.14.4 ; python_version >= "3.9" and python_version < "3.13"
+pydata-sphinx-theme==0.15.1 ; python_version >= "3.9" and python_version < "3.13"
 pygments==2.17.2 ; python_version >= "3.9" and python_version < "3.13"
 pyparsing==3.1.1 ; python_version >= "3.9" and python_version < "3.13"
-pyright==1.1.344 ; python_version >= "3.9" and python_version < "3.13"
+pyright==1.1.345 ; python_version >= "3.9" and python_version < "3.13"
 pytest==7.4.4 ; python_version >= "3.9" and python_version < "3.13"
 pytest-cov==4.1.0 ; python_version >= "3.9" and python_version < "3.13"
 pytest-xdist==3.5.0 ; python_version >= "3.9" and python_version < "3.13"
@@ -126,7 +126,7 @@ pyzmq==25.1.2 ; python_version >= "3.9" and python_version < "3.13"
 qtconsole==5.5.1 ; python_version >= "3.9" and python_version < "3.13"
 qtpy==2.4.1 ; python_version >= "3.9" and python_version < "3.13"
 readme-renderer==42.0 ; python_version >= "3.9" and python_version < "3.13"
-referencing==0.32.0 ; python_version >= "3.9" and python_version < "3.13"
+referencing==0.32.1 ; python_version >= "3.9" and python_version < "3.13"
 requests==2.31.0 ; python_version >= "3.9" and python_version < "3.13"
 requests-toolbelt==1.0.0 ; python_version >= "3.9" and python_version < "3.13"
 restructuredtext-lint==1.4.0 ; python_version >= "3.9" and python_version < "3.13"
@@ -145,7 +145,7 @@ snowballstemmer==2.2.0 ; python_version >= "3.9" and python_version < "3.13"
 soupsieve==2.5 ; python_version >= "3.9" and python_version < "3.13"
 sphinx==7.2.6 ; python_version >= "3.9" and python_version < "3.13"
 sphinxcontrib-applehelp==1.0.7 ; python_version >= "3.9" and python_version < "3.13"
-sphinxcontrib-bibtex==2.6.1 ; python_version >= "3.9" and python_version < "3.13"
+sphinxcontrib-bibtex==2.6.2 ; python_version >= "3.9" and python_version < "3.13"
 sphinxcontrib-devhelp==1.0.5 ; python_version >= "3.9" and python_version < "3.13"
 sphinxcontrib-htmlhelp==2.0.4 ; python_version >= "3.9" and python_version < "3.13"
 sphinxcontrib-jsmath==1.0.1 ; python_version >= "3.9" and python_version < "3.13"
@@ -159,12 +159,12 @@ tomli==2.0.1 ; python_version >= "3.9" and python_full_version <= "3.11.0a6"
 tornado==6.4 ; python_version >= "3.9" and python_version < "3.13"
 traitlets==5.14.1 ; python_version >= "3.9" and python_version < "3.13"
 twine==4.0.2 ; python_version >= "3.9" and python_version < "3.13"
-types-python-dateutil==2.8.19.14 ; python_version >= "3.9" and python_version < "3.13"
+types-python-dateutil==2.8.19.20240106 ; python_version >= "3.9" and python_version < "3.13"
 typing-extensions==4.9.0 ; python_version >= "3.9" and python_version < "3.13"
 uri-template==1.3.0 ; python_version >= "3.9" and python_version < "3.13"
 urllib3==2.1.0 ; python_version >= "3.9" and python_version < "3.13"
 virtualenv==20.25.0 ; python_version >= "3.9" and python_version < "3.13"
-wcwidth==0.2.12 ; python_version >= "3.9" and python_version < "3.13"
+wcwidth==0.2.13 ; python_version >= "3.9" and python_version < "3.13"
 webcolors==1.13 ; python_version >= "3.9" and python_version < "3.13"
 webencodings==0.5.1 ; python_version >= "3.9" and python_version < "3.13"
 websocket-client==1.7.0 ; python_version >= "3.9" and python_version < "3.13"
