Pin `coverage` to version `>= 6, < 7`.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,7 +63,7 @@ click = { version = ">= 8, < 9", python = "< 3.12" }
 ultralytics = { version = ">= 8, < 9", python = "< 3.12" }
 
 [tool.poetry.group.dev.dependencies]
-coverage = "!= 6.3"
+coverage = ">= 6, < 7"
 coveralls = "*"
 invoke = "*"
 jupyter = "*"
