--- a/.github/workflows/continuous-integration-quality-unit-tests.yml
+++ b/.github/workflows/continuous-integration-quality-unit-tests.yml
@@ -7,7 +7,7 @@ jobs:
     name: ${{ matrix.os }} - Python ${{ matrix.python-version }}
     strategy:
       matrix:
-        os: [macOS-latest, ubuntu-22.04, windows-2019]
+        os: [macOS-latest, ubuntu-latest, windows-2019]
         python-version: [3.9, "3.10", 3.11, 3.12]
       fail-fast: false
     runs-on: ${{ matrix.os }}
