--- a/pyproject.toml
+++ b/pyproject.toml
@@ -199,6 +199,7 @@ convention = "numpy"
 "colour-checker-detection/examples/*" = ["INP", "T201", "T203"]
 "docs/*" = ["INP"]
 "tasks.py" = ["INP"]
+"test_*" = ["S101"]
 "utilities/*" = ["EXE001", "INP"]
 "utilities/unicode_to_ascii.py" = ["RUF001"]
 
