--- a/pyproject.toml
+++ b/pyproject.toml
@@ -107,10 +107,8 @@ exclude = [
 colour-checker-detection-inference = "colour_checker_detection.scripts.inference:segmentation"
 
 [tool.codespell]
+ignore-words-list = "socio-economic"
 skip = "BIBLIOGRAPHY.bib,CONTRIBUTORS.rst,*.ipynb"
-
-[tool.flynt]
-line_length = 999
 
 [tool.isort]
 ensure_newline_before_comments = true
