--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -5,51 +5,51 @@ alabaster==1.0.0
 babel==2.16.0
 beautifulsoup4==4.12.3
 biblib-simple==0.1.2
-certifi==2024.8.30
+certifi==2024.12.14
 charset-normalizer==3.4.0
-click==8.1.7 ; python_full_version < '3.13'
-colorama==0.4.6 ; (platform_system != 'Windows' and sys_platform == 'win32') or (python_full_version < '3.13' and platform_system == 'Windows') or (python_full_version >= '3.13' and sys_platform == 'win32')
+click==8.1.8 ; python_full_version < '3.13'
+colorama==0.4.6 ; sys_platform == 'win32'
 colour-science==0.4.6
-contourpy==1.3.0
+contourpy==1.3.1
 cycler==0.12.1
 docutils==0.21.2
 filelock==3.16.1 ; python_full_version < '3.13'
-fonttools==4.54.1
-fsspec==2024.9.0 ; python_full_version < '3.13'
+fonttools==4.55.3
+fsspec==2024.12.0 ; python_full_version < '3.13'
 idna==3.10
-imageio==2.35.1
+imageio==2.36.1
 imagesize==1.4.1
-jinja2==3.1.4
+jinja2==3.1.5
 kiwisolver==1.4.7
 latexcodec==3.0.0
-markupsafe==3.0.1
-matplotlib==3.9.2
+markupsafe==3.0.2
+matplotlib==3.10.0
 mpmath==1.3.0 ; python_full_version < '3.13'
-networkx==3.4.1 ; python_full_version < '3.13'
-numpy==2.1.2
-nvidia-cublas-cu12==12.1.3.1 ; python_full_version < '3.13' and platform_machine == 'x86_64' and platform_system == 'Linux'
-nvidia-cuda-cupti-cu12==12.1.105 ; python_full_version < '3.13' and platform_machine == 'x86_64' and platform_system == 'Linux'
-nvidia-cuda-nvrtc-cu12==12.1.105 ; python_full_version < '3.13' and platform_machine == 'x86_64' and platform_system == 'Linux'
-nvidia-cuda-runtime-cu12==12.1.105 ; python_full_version < '3.13' and platform_machine == 'x86_64' and platform_system == 'Linux'
-nvidia-cudnn-cu12==9.1.0.70 ; python_full_version < '3.13' and platform_machine == 'x86_64' and platform_system == 'Linux'
-nvidia-cufft-cu12==11.0.2.54 ; python_full_version < '3.13' and platform_machine == 'x86_64' and platform_system == 'Linux'
-nvidia-curand-cu12==10.3.2.106 ; python_full_version < '3.13' and platform_machine == 'x86_64' and platform_system == 'Linux'
-nvidia-cusolver-cu12==11.4.5.107 ; python_full_version < '3.13' and platform_machine == 'x86_64' and platform_system == 'Linux'
-nvidia-cusparse-cu12==12.1.0.106 ; python_full_version < '3.13' and platform_machine == 'x86_64' and platform_system == 'Linux'
-nvidia-nccl-cu12==2.20.5 ; python_full_version < '3.13' and platform_machine == 'x86_64' and platform_system == 'Linux'
-nvidia-nvjitlink-cu12==12.6.77 ; python_full_version < '3.13' and platform_machine == 'x86_64' and platform_system == 'Linux'
-nvidia-nvtx-cu12==12.1.105 ; python_full_version < '3.13' and platform_machine == 'x86_64' and platform_system == 'Linux'
+networkx==3.4.2 ; python_full_version < '3.13'
+numpy==2.2.1
+nvidia-cublas-cu12==12.4.5.8 ; python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'
+nvidia-cuda-cupti-cu12==12.4.127 ; python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'
+nvidia-cuda-nvrtc-cu12==12.4.127 ; python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'
+nvidia-cuda-runtime-cu12==12.4.127 ; python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'
+nvidia-cudnn-cu12==9.1.0.70 ; python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'
+nvidia-cufft-cu12==11.2.1.3 ; python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'
+nvidia-curand-cu12==10.3.5.147 ; python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'
+nvidia-cusolver-cu12==11.6.1.9 ; python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'
+nvidia-cusparse-cu12==12.3.1.170 ; python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'
+nvidia-nccl-cu12==2.21.5 ; python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'
+nvidia-nvjitlink-cu12==12.4.127 ; python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'
+nvidia-nvtx-cu12==12.4.127 ; python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'
 opencv-python==4.10.0.84
-packaging==24.1
+packaging==24.2
 pandas==2.2.3 ; python_full_version < '3.13'
-pillow==10.4.0
-psutil==6.0.0 ; python_full_version < '3.13'
+pillow==11.0.0
+psutil==6.1.1 ; python_full_version < '3.13'
 py-cpuinfo==9.0.0 ; python_full_version < '3.13'
 pybtex==0.24.0
 pybtex-docutils==1.0.3
-pydata-sphinx-theme==0.15.4
+pydata-sphinx-theme==0.16.1
 pygments==2.18.0
-pyparsing==3.1.4
+pyparsing==3.2.0
 python-dateutil==2.9.0.post0
 pytz==2024.2 ; python_full_version < '3.13'
 pyyaml==6.0.2
@@ -57,11 +57,11 @@ requests==2.32.3
 restructuredtext-lint==1.4.0
 scipy==1.14.1
 seaborn==0.13.2 ; python_full_version < '3.13'
-setuptools==75.1.0 ; python_full_version >= '3.12'
-six==1.16.0
+setuptools==75.6.0 ; python_full_version >= '3.12'
+six==1.17.0
 snowballstemmer==2.2.0
 soupsieve==2.6
-sphinx==8.1.2
+sphinx==8.1.3
 sphinxcontrib-applehelp==2.0.0
 sphinxcontrib-bibtex==2.6.3
 sphinxcontrib-devhelp==2.0.0
@@ -69,14 +69,15 @@ sphinxcontrib-htmlhelp==2.1.0
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==2.0.0
 sphinxcontrib-serializinghtml==2.0.0
-sympy==1.13.3 ; python_full_version < '3.13'
-tomli==2.0.2 ; python_full_version < '3.11'
-torch==2.4.1 ; python_full_version < '3.13'
-torchvision==0.19.1 ; python_full_version < '3.13'
-tqdm==4.66.5 ; python_full_version < '3.13'
-triton==3.0.0 ; python_full_version < '3.13' and platform_machine == 'x86_64' and platform_system == 'Linux'
+sympy==1.13.1 ; python_full_version < '3.13'
+tomli==2.2.1 ; python_full_version < '3.11'
+torch==2.5.1 ; python_full_version < '3.13'
+torchvision==0.20.1 ; python_full_version < '3.13'
+tqdm==4.67.1 ; python_full_version < '3.13'
+triton==3.1.0 ; python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'
 typing-extensions==4.12.2
 tzdata==2024.2 ; python_full_version < '3.13'
-ultralytics==8.3.11 ; python_full_version < '3.13'
-ultralytics-thop==2.0.9 ; python_full_version < '3.13'
-urllib3==2.2.3
+ultralytics==8.3.23 ; python_full_version < '3.13'
+ultralytics==8.3.53 ; python_version < '0'
+ultralytics-thop==2.0.13 ; python_full_version < '3.13'
+urllib3==2.3.0
