--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,7 +43,7 @@ classifiers = [
 ]
 dependencies = [
     "colour-science>=0.4.5",
-    "imageio>=2,<3",
+    "openimageio>=3,<4",
     "numpy>=2.0.0,<3",
     "opencv-python>=4,<5",
     "scipy>=1.12.0,<2",
@@ -62,8 +62,11 @@ docs = [
     "sphinxcontrib-bibtex",
 ]
 ultralytics = [
-    "click>=8,<9; python_version<'3.13'",
-    "ultralytics>=8,<9; python_version<'3.13'",
+    "click>=8,<9; python_version<'3.14'",
+    "ultralytics>=8,<9; python_version<'3.14'",
+]
+sklearn = [
+    "scikit-learn>=1.7,<2",
 ]
 
 [project.urls]
