Migrate deprecated `tool.uv.dev-dependencies` to `dependency-groups.dev` in `pyproject.toml` file.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -78,7 +78,9 @@ Changelog = "https://github.com/colour-science/colour-checker-detection/releases
 
 [tool.uv]
 package = true
-dev-dependencies = [
+
+[dependency-groups]
+dev = [
     "coverage",
     "coveralls",
     "hatch",
