--- a/.github/workflows/continuous-integration-quality-unit-tests.yml
+++ b/.github/workflows/continuous-integration-quality-unit-tests.yml
@@ -22,10 +22,6 @@ jobs:
           echo "CI_SHA=${{ github.sha }}" >> $GITHUB_ENV
           echo "COVERALLS_REPO_TOKEN=${{ secrets.COVERALLS_REPO_TOKEN }}" >> $GITHUB_ENV
         shell: bash
-      - name: Set up Python 3.10 for Pre-Commit
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.10"
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
         with:
@@ -45,9 +41,10 @@ jobs:
           uv sync --all-extras
           uv run python -c "import imageio;imageio.plugins.freeimage.download()"
         shell: bash
-      - name: Pre-Commit (All Files)
+      - name: Prek (All Files)
+        if: matrix.os == 'macOS-latest'
         run: |
-          uv run pre-commit run --all-files
+          uv run prek run --all-files
         shell: bash
       - name: Test Optimised Python Execution
         run: |
