--- a/pyproject.toml
+++ b/pyproject.toml
@@ -86,7 +86,7 @@ dev = [
     "hatch",
     "invoke",
     "jupyter",
-    "pre-commit",
+    "prek",
     "pyright",
     "pytest",
     "pytest-cov<7.0.0",
