--- a/.github/workflows/continuous-integration-quality-unit-tests.yml
+++ b/.github/workflows/continuous-integration-quality-unit-tests.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       matrix:
         os: [macOS-latest, ubuntu-latest, windows-latest]
-        python-version: ["3.10", 3.11, 3.12, 3.13]
+        python-version: [3.11, 3.12, 3.13, 3.14]
       fail-fast: false
     runs-on: ${{ matrix.os }}
     steps:
