Free disk space in documentation CI.

--- a/.github/workflows/continuous-integration-documentation.yml
+++ b/.github/workflows/continuous-integration-documentation.yml
@@ -25,6 +25,19 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
+      - name: Clean Up Disk Space
+        run: |
+          df -h /
+
+          sudo rm -rf /usr/lib/jvm
+          sudo rm -rf /usr/local/.ghcup
+          sudo rm -rf /usr/local/lib/android
+          sudo rm -rf /usr/local/share/powershell
+          sudo rm -rf /usr/share/dotnet
+          sudo rm -rf /usr/share/swift
+          sudo rm -rf "$AGENT_TOOLSDIRECTORY"
+
+          df -h /
       - name: Install Dependencies
         run: |
           sudo apt-get update
