feat: Introduce color checker detection and correction features, including RAW image processing, multi-method detection, and associated tests and scripts.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ dependencies = [
     "pip-licenses>=5.5.0",
     "yamllint>=1.37.1",
     "pytest>=9.0.2",
+    "pyright>=1.1.407",
 ]
 
 [project.optional-dependencies]
