feat: Add Pyright static analysis output and update project configuration.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -134,7 +134,7 @@ reportMissingImports = false
 reportMissingModuleSource = false
 reportUnboundVariable = false
 reportUnnecessaryCast = true
-reportUnnecessaryTypeIgnoreComment = true
+reportUnnecessaryTypeIgnoreComment = false
 reportUnsupportedDunderAll = false
 reportUnusedExpression = false
 
